package textStructure;

public class BlockResult extends Block{
}
