@startuml

title __TEXTSTRUCTURE's Class Diagram__\n

  package  {
    package textStructure {
      class Block {
          - endIdx : long
          - inputFile : RandomAccessFile
          - starIdx : long
          + Block()
          + asString()
      }
    }
  }
  

  package  {
    package textStructure {
      class BlockResult {
      }
    }
  }
  

  package  {
    package textStructure {
      class Corpus {
          - entryList : List<Entry>
          + Corpus()
          {static} + getPath()
          + iterator()
          + getChecksum()
      }
    }
  }
  

  package  {
    package textStructure {
      class Entry {
          - blockList : List<Block>
          - sourceFile : String
          + Entry()
          + iterator()
          + getFile()
          + getBytes()
      }
    }
  }
  

  package  {
    package textStructure {
      class WordResult {
          - idxInBlk : int
          - content : String
          + WordResult()
          + WordResult()
          + getBlock()
          + getWord()
      }
    }
  }
  

  BlockResult -up-|> Block
  Corpus -up-|> Iterable
  Entry -up-|> Iterable
  Entry o-- IparsingRule : parseRule
  Entry o-- IdataStructure : index
  Entry o-- Corpus : origin
  WordResult o-- Block : location


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
